# AI_fundamentals

./: README.md  main.py  pyproject.toml
CH-1_LLMs/: 1_API_Calls.ipynb  2_Embeddings.ipynb
CH-2_RAG/: 1_RAG.ipynb
CH-2_RAG/chroma_db/: chroma.sqlite3
CH-3_Prompt_Engineering/: Promptig_Types.ipynb  prompt_call.ipynb
CH-4_Agent/: 1_Tool_Binding.ipynb  2_ReAct_Agent.ipynb  3_Structured_Output.ipynb  5.1_RAG_Semantic.ipynb  5.2_RAG_Agent.ipynb  6_Agent_Memory.ipynb
CH-4_Agent/chroma_db_semantic/: chroma.sqlite3
CH_2_RAG/: 1_RAG.ipynb
LLMs/: API_Calls.ipynb
SH-1_LLMs/: 1_API_Calls.ipynb
