[project]
name = "ai-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=3.0.0",
    "chromadb>=1.5.7",
    "ddgs>=9.13.1",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.72.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "matplotlib>=3.10.8",
    "mediawikiapi>=1.3",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "pypdf>=6.10.0",
    "wikibase-rest-api-client>=0.2.5",
    "wikipedia>=1.4.0",
]
